[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["braasch-cai <marcel.braasch@convalid-ai.de>"]
readme = "README.md"
packages = [{include = "secret_santa"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
